# QxFx0

./: .gitignore  AGENTS.md  ARCHITECTURAL_AUDIT.md  ARCHITECTURE.md  AUDIT_2026_COMPREHENSIVE.md  AUDIT_2026_CURRENT_STATE.md  AUDIT_2026_POST_REMEDIATION.md  CODEX_RESEARCH_EXECUTION_PLAN_2026.md  COMPREHENSIVE_AUDIT_2026.md  Dockerfile  LEXICON_IMPLEMENTATION_PLAN_2026.md  README.md  ROADMAP_REMEDIATION_2026.md  TECH_DEBT.md  TECH_DEBT_CLOSED_2026.md  brain_kb2.txt  cabal.project.freeze  flake.nix  guard.json  qxfx0.agda-lib  qxfx0.cabal
.githooks/: pre-commit
app/: CLI.hs
app/CLI/: Health.hs  Http.hs  Protocol.hs  State.hs  Turn.hs  Worker.hs
data/semantic/: realization_examples.jsonl
docs/: commit_preparation.md  input_semantic_contract.md  input_semantic_inventories.md  input_semantic_mapping.md  release_readiness.md  runtime_invariants.md  schema_contract_playbook.md  semantic_out_of_scope_boundary.md
docs/adr/: 0001-turn-effect-state-machine.md  0002-local-embedding-backend.md  0003-datalog-runtime-facts.md  0004-shadow-snapshot-parity.md  0005-turn-replay-trace.md  0006-narrative-route-hint-boundary.md
docs/audits/: AUDIT_REMEDIATION_2026-04-22.md  CLOCKWORK_DELTA_AUDIT_2026-04-23.md  STRENGTHENED_AUDIT_2026-04-23.md  ULTRA_AUDIT_2026-04-23.md
docs/releases/: v0.1.0.md
migrations/: 001_initial_schema.sql  002_turn_quality_trace_columns.sql  003_shadow_divergence_trace_columns.sql
nix/: module.nix
reports/: dialogue_eval_200_prompts.tsv  dialogue_eval_200_run_001.md  dialogue_eval_200_template.md  dialogue_eval_500_prompts.tsv  dialogue_eval_regression_prompts.tsv
research_packs/: README.md  input.txt  lexicon_stabilization_implementation_plan.md  research.txt  research2.txt  research_pack_all_in_one.md  research_pack_decision.md  research_pack_narrative.md  research_pack_shadow.md  research_pack_trace.md  semantic_stabilization_research_pack.md
resources/input_lexicon/: lexicon.json
resources/lexicon/: ru.lexicon.json
resources/morphology/: genitive.json  lexicon_quality.json  nominative.json  prepositional.json
scripts/: build_input_lexicon.py  build_lexicon.sh  check_architecture.sh  check_generated_artifacts.sh  check_haddock.sh  check_input_lexicon.py  check_lexicon.sh  check_schema_consistency.py  check_schema_contract.py  compile_gf_grammar.sh  dev-build.sh  dev-test.sh  export_lexicon.py  fuzz.sh  fuzz_harness.hs  http_runtime.py  import_brain.py  import_brain_kb.py  import_ru_opencorpora.py  mass_test_generator.py  mass_test_runner.py  release-smoke.sh  run_dialogue_eval_200.sh  run_release_dialogue_gate.sh  soak.sh  sync_embedded_sql.py  test_coverage.sh  verify.sh  verify_agda_sync.py
semantics/: concepts.nix
services/morphology/: server.py
spec/: Legitimacy.agda  LexiconContract.agda  LexiconData.agda  LexiconProof.agda  R5Core.agda  Sovereignty.agda  lexicon_snapshot.tsv  r5-snapshot.tsv
spec/gf/: QxFx0Lexicon.gf  QxFx0LexiconRus.gf  QxFx0Syntax.gf  QxFx0SyntaxRus.gf  lexicon_funmap.tsv
spec/sql/: runtime_critical_contract.tsv  schema.sql  seed_clusters.sql  seed_identity.sql  seed_templates.sql
spec/sql/lexicon/: auto_source_manifest.json  schema.sql  seed_brain_kb_reviewed.sql  seed_ru_core.sql  seed_ru_curated.sql  seed_ru_forms.sql
src/QxFx0/: Core.hs  ExceptionPolicy.hs  Resources.hs  Runtime.hs  Semantic.hs  Types.hs
src/QxFx0/Bridge/: AgdaR5.hs  AgdaWitness.hs  Datalog.hs  EmbeddedSQL.hs  Morphology.hs  NativeSQLite.hs  NixCache.hs  NixGuard.hs  SQLite.hs  StatePersistence.hs  TxStatement.hs
src/QxFx0/Bridge/Datalog/: Compare.hs  Runtime.hs  Support.hs  Types.hs
src/QxFx0/Bridge/SQLite/: Bootstrap.hs  Pool.hs  Queries.hs  SchemaContract.hs
src/QxFx0/CLI/: Parser.hs
src/QxFx0/Core/: BackgroundProcess.hs  ClaimBuilder.hs  Consciousness.hs  ConsciousnessLoop.hs  DreamDynamics.hs  Ego.hs  Guard.hs  IdentityGuard.hs  IdentitySignal.hs  Intuition.hs  Legitimacy.hs  MeaningGraph.hs  Observability.hs  PipelineIO.hs  PrincipledCore.hs  R5Dynamics.hs  SessionLock.hs  TurnLegitimacy.hs  TurnModulation.hs  TurnPipeline.hs  TurnPlanning.hs  TurnPolicy.hs  TurnRender.hs  TurnRouting.hs  Vec.hs
src/QxFx0/Core/Consciousness/: Kernel.hs  Narrative.hs  Types.hs
src/QxFx0/Core/Guard/: Checks.hs  Recovery.hs  Types.hs
src/QxFx0/Core/Legitimacy/: Policy.hs  Scoring.hs
src/QxFx0/Core/PipelineIO/: Internal.hs  Operations.hs  Test.hs
src/QxFx0/Core/Policy/: Consciousness.hs  Contracts.hs  ParserKeywords.hs
src/QxFx0/Core/Render/: Dialogue.hs  Semantic.hs
src/QxFx0/Core/Semantic/: Embedding.hs  Input.hs  KeywordMatch.hs  Logic.hs  MeaningAtoms.hs  Morphology.hs  Proposition.hs  SemanticInput.hs  SemanticScene.hs
src/QxFx0/Core/TurnLegitimacy/: Output.hs  Plans.hs
src/QxFx0/Lexicon/: Analyze.hs  Generated.hs  GfMap.hs  Inflection.hs  Loader.hs  Resolver.hs  Runtime.hs  Types.hs
src/QxFx0/Policy/: Consciousness.hs  Contracts.hs  ParserKeywords.hs  RenderLexicon.hs  SemanticScoring.hs  Templates.hs
src/QxFx0/Render/: Dialogue.hs  Semantic.hs  Text.hs
src/QxFx0/Resources/: Morphology.hs  Paths.hs  Readiness.hs
src/QxFx0/Runtime/: Context.hs  Engine.hs  Gate.hs  Health.hs  Mode.hs  PGF.hs  Paths.hs  Session.hs  Wiring.hs
src/QxFx0/Semantic/: Embedding.hs  Input.hs  KeywordMatch.hs  Logic.hs  MeaningAtoms.hs  Morphology.hs  Proposition.hs  SemanticInput.hs  SemanticScene.hs
src/QxFx0/Types/: ClaimAst.hs  Decision.hs  Domain.hs  Dream.hs  IdentityGuard.hs  Intuition.hs  Observability.hs  Orbital.hs  Persistence.hs  Readiness.hs  Recovery.hs  ShadowDivergence.hs  State.hs  Text.hs  Thresholds.hs  TurnProjection.hs  Vec.hs
test/: TestMain.hs  test_import_brain_kb.py  test_import_ru_opencorpora.py
test/Test/: Support.hs
test/Test/Suite/: CoreBehavior.hs  HttpRuntime.hs  LexiconTests.hs  RuntimeInfrastructure.hs  SemanticCorpus.hs  TurnPipelineProtocol.hs
test/golden/: semantic_corpus.jsonl
test/golden/input_semantics/: README.md  corpus_mapping.json  russian_school_parser_corpus_400.csv
test/golden/lexicon/: atoms.jsonl  morphology.jsonl  proposition.jsonl  render.jsonl
(+96 files in other folders)
