cabal-version: 3.4
name:          qxfx0
version:       0.1.0.0
synopsis:      QxFx0 Flagship Philosophical Dialogue Thinking System
description:   A synthesis of five experiments combining Agda, Nix, SQL, and Haskell
               for a Russian-language philosophical dialogue thinking system with
               14 CanonicalMoveFamily types, R5 verdict routing, evidence graphs,
               consciousness kernel, Bayesian intuition, and meaning graph with
               dream rewiring.
category:      AI
author:        QxFx Research
maintainer:    QxFx Research <qxfx@research.example>
license:       MIT
data-files:
  migrations/*.sql
  resources/lexicon/*.json
  resources/morphology/*.json
  semantics/*.nix
  spec/*.agda
  spec/*.tsv
  spec/datalog/*.dl
  spec/gf/*.gf
  spec/gf/*.tsv
  spec/sql/*.sql
  spec/sql/lexicon/*.sql
  scripts/http_runtime.py

common warnings
  ghc-options: -Wall -Wcompat -Wincomplete-uni-patterns
               -Wincomplete-record-updates -Wredundant-constraints
               -Wmissing-deriving-strategies -Wno-unticked-promoted-constructors

common base-deps
  build-depends:
    , base          >=4.17 && <5
    , text          >=1.2 && <2.2
    , bytestring    >=0.11 && <0.13
    , mtl           >=2.2 && <2.4
    , containers    >=0.6 && <0.8
    , aeson         >=1.5 && <2.3
    , unordered-containers >=0.2 && <0.3

library
  import:           warnings, base-deps
  autogen-modules:
    Paths_qxfx0
  exposed-modules:
    QxFx0.Types
    QxFx0.Types.Domain
    QxFx0.Types.Domain.Atoms
    QxFx0.Types.Decision
    QxFx0.Types.Dream
    QxFx0.Types.Intuition
    QxFx0.Types.Observability
    QxFx0.Types.Persistence
    QxFx0.Types.Readiness
    QxFx0.Types.Recovery
    QxFx0.Types.State
    QxFx0.Types.Thresholds
    QxFx0.Types.Orbital
    QxFx0.Types.IdentityGuard
    QxFx0.Types.ShadowDivergence
    QxFx0.Types.ClaimAst
    QxFx0.Types.TurnProjection
    QxFx0.Types.Vec
    QxFx0.ExceptionPolicy
    QxFx0.Lexicon.Types
    QxFx0.Lexicon.Loader
    QxFx0.Lexicon.Generated
    QxFx0.Lexicon.GfMap
    QxFx0.Lexicon.Runtime
    QxFx0.Lexicon.Analyze
    QxFx0.Lexicon.Resolver
    QxFx0.Lexicon.Inflection

    QxFx0.Policy.Templates
    QxFx0.Resources
    QxFx0.Core
    QxFx0.Core.Vec
    QxFx0.Core.PipelineIO
    QxFx0.Core.Guard
    QxFx0.Core.Consciousness
    QxFx0.Core.ConsciousnessLoop
    QxFx0.Core.Intuition
    QxFx0.Core.PrincipledCore
    QxFx0.Core.MeaningGraph
    QxFx0.Core.DreamDynamics

    QxFx0.Core.BackgroundProcess
    QxFx0.Runtime
    QxFx0.Runtime.Health
    QxFx0.Runtime.PGF
    QxFx0.Runtime.Session
    QxFx0.Core.Observability
    QxFx0.Core.SessionLock
    QxFx0.Core.R5Dynamics
    QxFx0.Core.IdentitySignal
    QxFx0.Core.IdentityGuard
    QxFx0.Core.ClaimBuilder
    QxFx0.Core.Ego
    QxFx0.Core.Legitimacy
    QxFx0.Core.TurnPolicy
    QxFx0.Core.TurnPlanning
    QxFx0.Core.TurnRouting
    QxFx0.Core.TurnModulation
    QxFx0.Core.TurnRender
    QxFx0.Core.TurnLegitimacy
    QxFx0.Core.TurnPipeline
    QxFx0.Core.TurnPipeline.Protocol
    QxFx0.Bridge.NixGuard
    QxFx0.Bridge.NixCache
    QxFx0.Bridge.SQLite
    QxFx0.Bridge.SQLite.SchemaContract
    QxFx0.Bridge.NativeSQLite
    QxFx0.Bridge.EmbeddedSQL
    QxFx0.Bridge.Morphology
    QxFx0.Bridge.AgdaR5
    QxFx0.Bridge.Datalog
    QxFx0.Bridge.StatePersistence
    QxFx0.Bridge.TxStatement

    QxFx0.CLI.Parser
    QxFx0.Semantic
    QxFx0.Semantic.MeaningAtoms
    QxFx0.Semantic.Logic
    QxFx0.Semantic.Embedding
    QxFx0.Semantic.Morphology
    QxFx0.Semantic.Proposition
    QxFx0.Semantic.Proposition.Types
    QxFx0.Semantic.Proposition.Parse
    QxFx0.Semantic.Proposition.Detect.Contact
    QxFx0.Semantic.Proposition.Detect.Ground
    QxFx0.Semantic.Proposition.Detect.Define
    QxFx0.Semantic.Proposition.Detect.Reflect
    QxFx0.Semantic.Proposition.Detect.Repair
    QxFx0.Semantic.Proposition.Detect.NextStep
    QxFx0.Semantic.Proposition.Detect.Comparison
    QxFx0.Semantic.Proposition.Detect.Overrides
    QxFx0.Semantic.SemanticScene
    QxFx0.Semantic.SemanticInput
    QxFx0.Semantic.Input
    QxFx0.Semantic.Input.Assemble.Types
    QxFx0.Semantic.Input.Assemble.WordUnits
    QxFx0.Semantic.Input.Assemble.RouteHints
    QxFx0.Semantic.Input.Assemble.Detection
    QxFx0.Semantic.Input.Assemble.Builders
    QxFx0.Semantic.Input.Model
    QxFx0.Semantic.Input.Normalize
    QxFx0.Semantic.Input.Lexicon
    QxFx0.Semantic.Input.Classify
    QxFx0.Semantic.Input.Assemble
    QxFx0.Runtime.Engine
    QxFx0.Core.PipelineIO.Internal
    QxFx0.Core.PipelineIO.Operations
    QxFx0.Core.PipelineIO.Test
    QxFx0.Core.Consciousness.Types
    QxFx0.Core.Consciousness.Kernel
    QxFx0.Core.Consciousness.Kernel.Init
    QxFx0.Core.Consciousness.Kernel.Pulse
    QxFx0.Core.Consciousness.Narrative
    QxFx0.Core.Semantic.Embedding
    QxFx0.Core.Semantic.KeywordMatch
    QxFx0.Core.Semantic.Logic
    QxFx0.Core.Semantic.MeaningAtoms
    QxFx0.Core.Semantic.Morphology
    QxFx0.Core.Semantic.Proposition
    QxFx0.Core.Semantic.Input
    QxFx0.Core.Semantic.SemanticInput
    QxFx0.Core.Semantic.SemanticScene
    QxFx0.Core.Render.Dialogue
    QxFx0.Core.Render.Semantic
    QxFx0.Core.Policy.Consciousness
    QxFx0.Core.Policy.Contracts
    QxFx0.Core.Policy.ParserKeywords
    QxFx0.Core.TurnPlanning.Modulation
    QxFx0.Core.TurnPlanning.Builders
    QxFx0.Core.TurnPlanning.Templates
    QxFx0.Core.TurnPlanning.Claims
    QxFx0.Core.TurnRouting.Types
    QxFx0.Core.TurnRouting.Phase
    QxFx0.Core.TurnRouting.Cascade
    QxFx0.Core.TurnRender.Strategy
    QxFx0.Core.TurnRender.Anchor
    QxFx0.Core.TurnRender.Prefix
    QxFx0.Core.TurnRender.Cache
    QxFx0.Core.TurnModulation.Narrative
    QxFx0.Core.TurnModulation.Tension
    QxFx0.Core.Guard.Types
    QxFx0.Core.Guard.Checks
    QxFx0.Core.Guard.Recovery
    QxFx0.Core.Legitimacy.Scoring
    QxFx0.Core.Legitimacy.Policy
    QxFx0.Core.TurnLegitimacy.Plans
    QxFx0.Core.TurnLegitimacy.Output
    QxFx0.Core.TurnPipeline.Types
    QxFx0.Core.TurnPipeline.Effects
    QxFx0.Core.TurnPipeline.Prepare
    QxFx0.Core.TurnPipeline.Prepare.Types
    QxFx0.Core.TurnPipeline.Prepare.Resolve
    QxFx0.Core.TurnPipeline.Prepare.Build
    QxFx0.Core.TurnPipeline.Route
    QxFx0.Core.TurnPipeline.Route.Build
    QxFx0.Core.TurnPipeline.Route.Effects
    QxFx0.Core.TurnPipeline.Route.Shadow
    QxFx0.Core.TurnPipeline.Route.Types
    QxFx0.Core.TurnPipeline.Finalize
    QxFx0.Core.TurnPipeline.Finalize.Types
    QxFx0.Core.TurnPipeline.Finalize.Precommit
    QxFx0.Core.TurnPipeline.Finalize.Commit
    QxFx0.Core.TurnPipeline.Finalize.Orchestrate
    QxFx0.Core.TurnPipeline.Finalize.Dream
    QxFx0.Core.TurnPipeline.Finalize.State
  hs-source-dirs:   src
  extra-libraries:  sqlite3
  build-depends:
    , process        >=1.6 && <1.7
    , http-conduit   >=2.3 && <2.4
    , http-client    >=0.7 && <0.8
    , http-types     >=0.12 && <0.13
    , case-insensitive >=1.2 && <1.3
    , vector         >=0.12 && <0.14
    , directory      >=1.3 && <1.4
    , filepath       >=1.4 && <1.5
    , time           >=1.11 && <1.13
    , random         >=1.2 && <1.3
    , uuid           >=1.3 && <1.4
    , stm            >=2.5 && <2.6
    , async          >=2.2 && <2.3
    , hashable       >=1.3 && <1.5
    , cryptohash-sha256 >=0.11 && <0.12
    , unix           >=2.7 && <2.9
    , deepseq        >=1.4 && <1.6

executable qxfx0-main
  import:        warnings, base-deps
  autogen-modules:
    Paths_qxfx0
  main-is:       Main.hs
  other-modules:
    Paths_qxfx0
    CLI
    CLI.Health
    CLI.Http
    CLI.Protocol
    CLI.State
    CLI.Turn
    CLI.Worker
  hs-source-dirs: app
  build-depends: qxfx0, directory >=1.3 && <1.4, filepath >=1.4 && <1.5, process >=1.6 && <1.7, time >=1.11 && <1.13, unix >=2.7 && <2.9

test-suite qxfx0-test
  import:        warnings, base-deps
  type:          exitcode-stdio-1.0
  main-is:       TestMain.hs
  other-modules:
    Test.Support
    Test.Suite.CoreBehavior
    Test.Suite.TurnPipelineProtocol
    Test.Suite.RuntimeInfrastructure
    Test.Suite.HttpRuntime
    Test.Suite.SemanticCorpus
    Test.Suite.LexiconTests
  hs-source-dirs: test
  build-tool-depends:
    qxfx0:qxfx0-main
  build-depends:
    , qxfx0
    , HUnit        >=1.6 && <1.7
    , QuickCheck   >=2.14 && <2.15
    , hspec         >=2.7 && <2.12
    , vector        >=0.12 && <0.14
    , async         >=2.2 && <2.3
    , directory     >=1.3 && <1.4
    , filepath      >=1.4 && <1.5
    , time          >=1.11 && <1.13
    , process       >=1.6 && <1.7
    , http-conduit  >=2.3 && <2.4
